@@ -1,7 +1,12 @@
 Revision history for Tesla-API
 
 0.04 UNREL
-    -
+    - Fix issue where we were assigning to the wrong variable in
+      api_cache_time()
+    - Renamed $api_cache_time to $api_cache_alive_time to be non-ambiguous to
+      the api_cache_time() method
+    - Added entire section in POD dealing exclusively with the API caching
+      mechanism
 
 0.03    2022-03-19
     - Added api_clear_cache() for methods that need to daisy chain calls, but
